--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,10 +3,15 @@
 #footer {
   position: absolute;
   width: 100%;
-
+  background-color: rgba(0, 0, 0, 0.1);
 }
 #footer img {
   max-width: 50%;
   max-height: 50%;
 }
-
+section div div{
+	
+	margin-top: 1em;
+	margin-bottom: 2.5em;
+	
+}
