Volunteer User Form & Authorization

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5621,12 +5621,12 @@ tbody.collapse.in {
 }
 
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: white;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: grey;
   background-color: transparent;
 }
 
