--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1454,6 +1454,108 @@ body {
 	background-color: #f5f8fa;
 }
 
+.grad1 {
+	background: #355C7D; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad2 {
+	background: #3E5151; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #DECBA4, #3E5151);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #DECBA4, #3E5151);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad2r {
+	background: #3E5151; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #DECBA4, #3E5151);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #DECBA4, #3E5151);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad3 {
+	background: #0f0c29; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #24243e, #302b63, #0f0c29);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #24243e, #302b63, #383175);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad3r {
+	background: #0f0c29; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #383175, #302b63, #24243e);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #383175, #302b63, #24243e);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad4 {
+	background: #3A1C71; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #FFAF7B, #D76D77, #3A1C71);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #FFAF7B, #D76D77, #3A1C71);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad5 {
+	background: #200122; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #6f0000, #200122);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #6f0000, #200122);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.grad6{
+	background: #4568DC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	
+}
+.grad7{
+	background: #F0F2F0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #000C40, #F0F2F0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #000C40, #F0F2F0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	
+}
+.grad7r{
+	background: #F0F2F0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #F0F2F0,#000C40);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #F0F2F0,#000C40); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	
+}
+.grad8{
+	
+background: #3a6186;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #855561, #3a6186);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #855561, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	
+}
+.grad8r{
+background: #3a6186;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #8f6a73, #3a6186);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #8f6a73, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.grad9{
+background: #59647f;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #716679, #59647f);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #716679, #59647f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.grad10{
+background: #342635bd;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #342635bd, #3e2640bd);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #342635bd, #3e2640bd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.borderedB{
+	border: 3px solid #222232; 
+	border-radius:1px;
+}
 input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
