--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,39 @@ textarea{
 	border: 3px solid #222232; 
 	border-radius:1px;
 }
+.thirds{
+	width:66%;
+	margin-left:auto;
+	margin-right:auto;
+}
+.autosides{
+	margin-left:auto;
+	margin-right:auto;
+}
+.innerShadowP{
+	-moz-box-shadow: inset 0 0 30px #342b38;
+	-webkit-box-shadow: inset 0 0 30px #342b38;
+	box-shadow: inset 1 1 30px #342b38;
+}
+.quartered{
+	width:75%;
+	margin-left:auto;
+	margin-right:auto;
+}
+.glcborder{
+	border: 2px solid #3b3f46;
+}
+.glcborderB{
+	border: 2px solid #35283d;
+}
+.vpad{
+	padding-top:1em;
+	padding-bottom:1em;
+}
+.vpadh{
+	padding-top:2em;
+	padding-bottom:2em;
+}
 hr{
 	border-color:grey;
 }
@@ -124,9 +157,12 @@ a>i.fab:hover{
 }
 
 .imgBg {
-	background-position: center;
+	
 	background-repeat: no-repeat;
 	background-size: cover;
+	max-width: 100%;
+    max-height: 100%;
+	
 }
 
 .cw {
@@ -308,6 +344,16 @@ button {
 	color: white;
 }
 
+.lp {
+	padding-left: 2em;
+}
+
+.lm {
+	margin-left: 2em;
+}
+.animateHeight {
+	transition: max-height 0.25s ease-in;
+}
 .btn-outline-primary:hover {
 	background-color: #1d5f96;
 	color: white;
