--- a/public/css/main.css
+++ b/public/css/main.css
@@ -286,7 +286,17 @@ a:hover.nav-link {
 	-webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 	transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-
+.boxB{
+	position: relative;
+	display: inline-block;
+	width: 10em;
+	height: 10em;
+	border-radius: 5px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	-webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+	transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 .watchOpacity {
 	transition: opacity 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
