--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,72 @@
 	padding-left:0.25em;
 	
 }
+header
+{
+	font-family: 'Lobster', cursive;
+	text-align: center;
+	font-size: 25px;	
+}
+
+#info
+{
+	font-size: 18px;
+	color: #555;
+	text-align: center;
+	margin-bottom: 25px;
+}
+
+a{
+	color: #074E8C;
+}
+
+.scrollbar
+{
+	margin-left: 30px;
+	float: left;
+	height: 300px;
+	width: 65px;
+	background: #F5F5F5;
+	overflow-y: scroll;
+	margin-bottom: 25px;
+}
+
+.force-overflow
+{
+	min-height: 450px;
+}
+
+#wrapper
+{
+	text-align: center;
+	width: 500px;
+	margin: auto;
+}
+
+#style-2::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+.scrollColorA{
+	scrollbar-color: #1d5f96 transparent;
+}
+.scrollColorA:hover{
+	scrollbar-color: #0d4f86 transparent;
+}
+#style-2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #D62929;
+}
 
 textarea{
     border: ridge 2px;
@@ -32,6 +98,12 @@ textarea{
 }
 .leftpadded{
 	padding-left:2em;
+}
+
+.bioImg{
+	
+	border: 2px solid black;
+	
 }
 .hoverBlue:hover{
 	
@@ -173,19 +245,39 @@ a>i.fab:hover{
 	background-size: cover;
 	max-width: 100%;
     max-height: 100%;
+	border: 2px solid #3A3A3A;
+	-moz-box-shadow: inset 0 0 10px #000000;
+	-webkit-box-shadow: inset 0 0 10px #000000;
+	box-shadow: inset 0 0 10px #000000;
 	
 }
-
+.blacktext{
+	color:black !important;
+}
+body{
+	font-family: 'Montserrat', sans-serif;
+}
 .cw {
 	color: white;
 }
-
+.nameselector:hover{
+	
+	color:grey;
+	font-style:bold;
+	
+}
 .vAction {
 	color: white;
 	vertical-align: top;
 	transition: opacity 0.3s;
 	-webkit-transition: opacity 0.3s;
 	opacity: 1;
+}
+.padTopHuge{
+	padding-top:4em;
+}
+.padTopBig{
+	padding-top:2em;
 }
 .tinyFont{
 	font-size:0.5em;
@@ -374,7 +466,7 @@ button {
 	color: black;
 }
 
-.btn {
+.btn{
 	border-radius: 2px;
 	border: 2px solid #1d5f96;
 }
